--- a/dashboard.html
+++ b/dashboard.html
@@ -1,83 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BAMS Dashboard</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
       font-family: 'Segoe UI', sans-serif;
-    }
-
-    body {
-      background: #fdfdfd;
+      background: linear-gradient(135deg, #fdfbfb, #ebedee);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
       min-height: 100vh;
-      padding: 20px;
     }
 
     header {
       width: 100%;
-      padding: 20px 0;
+      padding: 20px;
+      background: white;
+      border-bottom: 1px solid #ddd;
       text-align: center;
-      border-bottom: 1px solid #e0e0e0;
-      font-size: 1.8rem;
+      font-size: 24px;
       font-weight: bold;
-      color: #333;
+      color: #262626;
     }
 
     .welcome {
-      margin: 20px 0;
-      font-size: 1.2rem;
+      margin: 20px;
+      font-size: 18px;
       color: #555;
     }
 
-    .grid {
+    .dashboard {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(2, 1fr);
       gap: 20px;
-      max-width: 500px;
+      max-width: 600px;
       width: 100%;
+      padding: 20px;
     }
 
     .card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+      padding: 30px;
       text-align: center;
+      font-size: 18px;
+      color: #262626;
       cursor: pointer;
-      transition: all 0.2s ease;
-      border: 1px solid #f0f0f0;
+      transition: 0.3s ease;
     }
 
     .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+      background: #f0f0f0;
     }
 
-    .card span {
-      font-size: 2rem;
-      margin-bottom: 8px;
-    }
-
-    .card p {
-      font-size: 1rem;
-      color: #444;
+    .emoji {
+      display: block;
+      font-size: 30px;
+      margin-bottom: 10px;
     }
 
     @media (max-width: 600px) {
-      .grid {
+      .dashboard {
         grid-template-columns: 1fr;
       }
     }
@@ -88,30 +77,29 @@
   <header>BAMS Dashboard</header>
   <div class="welcome">Welcome, pgtech lab</div>
 
-  <div class="grid">
+  <div class="dashboard">
     <div class="card" onclick="location.href='entertainment.html'">
-      <span>🎉</span>
-      <p>Entertainment</p>
+      <span class="emoji">🎉</span>
+      Entertainment
     </div>
     <div class="card" onclick="location.href='quiz.html'">
-      <span>🧠</span>
-      <p>Daily Quiz</p>
+      <span class="emoji">🧠</span>
+      Daily Quiz
     </div>
     <div class="card" onclick="location.href='profile.html'">
-      <span>👤</span>
-      <p>Profile</p>
+      <span class="emoji">👤</span>
+      Profile
     </div>
     <div class="card" onclick="logout()">
-      <span>🔓</span>
-      <p>Logout</p>
+      <span class="emoji">🔓</span>
+      Logout
     </div>
   </div>
 
   <script>
     function logout() {
-      firebase.auth().signOut().then(() => {
-        window.location.href = "index.html";
-      });
+      // Replace with actual Firebase logout logic
+      alert('Logout function triggered');
     }
   </script>
 </body>
