--- a/quiz.html
+++ b/quiz.html
@@ -1,159 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Daily Quiz | BAMS Social</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-
+  <title>Ayurveda Quiz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #56ccf2, #2f80ed);
+      background: #f9f9f9;
       margin: 0;
       padding: 0;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
     }
-
-    header {
-      background-color: rgba(0,0,0,0.2);
-      padding: 20px;
-      font-size: 1.5rem;
-      font-weight: bold;
-      width: 100%;
-      text-align: center;
-    }
-
     .container {
-      background: white;
-      color: #333;
-      margin: 30px auto;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-      width: 90%;
       max-width: 600px;
+      margin: 20px auto;
+      background: #fff;
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
     }
-
+    h2 {
+      text-align: center;
+      color: #4CAF50;
+    }
+    .question {
+      margin: 20px 0;
+    }
     .option {
+      background: #f1f1f1;
+      border-radius: 10px;
       margin: 10px 0;
-    }
-
-    .option input {
-      margin-right: 10px;
-    }
-
-    button {
-      padding: 10px 20px;
-      background: #2f80ed;
-      color: white;
-      border: none;
-      border-radius: 6px;
+      padding: 10px;
       cursor: pointer;
-      font-weight: bold;
     }
-
-    #result {
+    .option:hover {
+      background: #d0f0d0;
+    }
+    .leaderboard {
+      margin-top: 30px;
+    }
+    .leaderboard h3 {
+      color: #333;
+      margin-bottom: 10px;
+    }
+    .leaderboard ul {
+      list-style: none;
+      padding: 0;
+    }
+    .leaderboard li {
+      background: #eee;
+      margin: 5px 0;
+      padding: 10px;
+      border-radius: 8px;
+    }
+    .result {
+      text-align: center;
       margin-top: 20px;
-      font-size: 1.1rem;
       font-weight: bold;
+      color: green;
     }
   </style>
 </head>
 <body>
 
-  <header>🧠 Daily Quiz - BAMS Social App</header>
+<div class="container">
+  <h2>🌿 Daily Ayurveda Quiz</h2>
+  <div id="quiz"></div>
+  <div class="result" id="result"></div>
 
-  <div class="container" id="quizContainer">
-    <p>Loading today's quiz...</p>
+  <div class="leaderboard">
+    <h3>🏆 Leaderboard (Today)</h3>
+    <ul id="leaderboardList"></ul>
   </div>
+</div>
 
-  <script>
-    // Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyCJLo6CsZDiYrygv9huk0_BLHmQvkhRxxY",
-      authDomain: "bams-social-app.firebaseapp.com",
-      projectId: "bams-social-app",
-      storageBucket: "bams-social-app.firebasestorage.app",
-      messagingSenderId: "542183068748",
-      appId: "1:542183068748:web:c6beb38679a3026eae10e9",
-      measurementId: "G-40MHQ4M0X5"
-    };
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCJLo6CsZDiYrygv9huk0_BLHmQvkhRxxY",
+    authDomain: "bams-social-app.firebaseapp.com",
+    projectId: "bams-social-app",
+    storageBucket: "bams-social-app.appspot.com",
+    messagingSenderId: "542183068748",
+    appId: "1:542183068748:web:c6beb38679a3026eae10e9"
+  };
 
-    let currentUser = null;
-    const quizContainer = document.getElementById("quizContainer");
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  const auth = firebase.auth();
 
-    auth.onAuthStateChanged(user => {
-      if (!user) {
-        window.location.href = "index.html";
-      } else {
-        currentUser = user;
-        loadQuiz();
-      }
-    });
+  const quizContainer = document.getElementById("quiz");
+  const resultEl = document.getElementById("result");
 
-    function loadQuiz() {
-      const today = new Date().toISOString().split('T')[0];
+  const today = new Date().toISOString().split("T")[0];
 
-      db.collection("dailyQuizzes").doc(today).get().then(doc => {
-        if (!doc.exists) {
-          quizContainer.innerHTML = "<p>No quiz found for today. Please check back tomorrow.</p>";
-          return;
-        }
+  auth.signInAnonymously().then(() => {
+    loadQuiz();
+    loadLeaderboard();
+  });
 
-        const quiz = doc.data();
-        let html = `<h2>${quiz.question}</h2><form id="quizForm">`;
-
-        quiz.options.forEach((opt, index) => {
-          html += `
-            <div class="option">
-              <input type="radio" name="option" value="${index}" id="opt${index}">
-              <label for="opt${index}">${opt}</label>
-            </div>`;
-        });
-
-        html += `<button type="button" onclick="submitQuiz('${today}', ${quiz.correctAnswer})">Submit</button>`;
-        html += `<div id="result"></div></form>`;
-
-        quizContainer.innerHTML = html;
-      });
-    }
-
-    function submitQuiz(date, correctAnswer) {
-      const selected = document.querySelector('input[name="option"]:checked');
-      const resultDiv = document.getElementById("result");
-
-      if (!selected) {
-        resultDiv.innerHTML = "❗ Please select an option.";
-        resultDiv.style.color = "red";
+  function loadQuiz() {
+    db.collection("quizzes").doc(today).get().then(doc => {
+      if (!doc.exists) {
+        quizContainer.innerHTML = "No quiz for today yet!";
         return;
       }
 
-      const answer = parseInt(selected.value);
-      const isCorrect = answer === correctAnswer;
-
-      db.collection("quizResponses").add({
-        user: currentUser.email,
-        date: date,
-        answer: answer,
-        isCorrect: isCorrect,
-        submittedAt: firebase.firestore.FieldValue.serverTimestamp()
+      const quizData = doc.data().questions;
+      quizData.forEach((q, index) => {
+        const qDiv = document.createElement("div");
+        qDiv.classList.add("question");
+        qDiv.innerHTML = `<strong>${index + 1}. ${q.question}</strong>`;
+        q.options.forEach(opt => {
+          const optDiv = document.createElement("div");
+          optDiv.classList.add("option");
+          optDiv.innerText = opt;
+          optDiv.onclick = () => submitAnswer(q.question, opt, q.answer);
+          qDiv.appendChild(optDiv);
+        });
+        quizContainer.appendChild(qDiv);
       });
+    });
+  }
 
-      resultDiv.innerHTML = isCorrect ? "✅ Correct Answer!" : "❌ Wrong Answer.";
-      resultDiv.style.color = isCorrect ? "green" : "red";
-    }
-  </script>
+  function submitAnswer(question, selected, correct) {
+    const user = auth.currentUser.uid;
+    const isCorrect = selected === correct;
+
+    db.collection("quizResponses").add({
+      user,
+      question,
+      selected,
+      correct,
+      isCorrect,
+      date: today
+    }).then(() => {
+      resultEl.innerText = isCorrect ? "✅ Correct!" : "❌ Wrong!";
+      setTimeout(() => resultEl.innerText = "", 3000);
+    });
+  }
+
+  function loadLeaderboard() {
+    db.collection("quizResponses")
+      .where("date", "==", today)
+      .where("isCorrect", "==", true)
+      .get()
+      .then(snapshot => {
+        const scoreMap = {};
+        snapshot.forEach(doc => {
+          const user = doc.data().user;
+          scoreMap[user] = (scoreMap[user] || 0) + 1;
+        });
+
+        const sorted = Object.entries(scoreMap)
+          .sort((a, b) => b[1] - a[1])
+          .slice(0, 5);
+
+        const list = document.getElementById("leaderboardList");
+        list.innerHTML = "";
+        sorted.forEach(([user, score], idx) => {
+          const li = document.createElement("li");
+          li.innerText = `User-${user.substring(0, 6)}: ${score} pts`;
+          list.appendChild(li);
+        });
+      });
+  }
+</script>
+
 </body>
 </html>
